fixed alignment of todo list component

--- a/src/scss/components/_list.scss
+++ b/src/scss/components/_list.scss
@@ -4,6 +4,10 @@
   margin: 20px 10px;
 
   input {
+    @include max(568px) {
+      margin: 10px 0;
+      text-align: center;
+    }
     background-color: transparent;
     border: 1px solid $primary;
     width: 100%;
@@ -11,15 +15,19 @@
     padding: 10px;
     text-align: left;
     color: #343434;
+    margin-right: 20px;
     &:focus {
       outline: none;
     }
   }
   button {
+    @include max(568px) {
+      width: 100%;
+    }
     background-color: $primary;
     color: white;
     border: none;
-    width: 50%;
+    width: 40%;
     height: 40px;
   }
 }
@@ -28,9 +36,11 @@
   @include flex-center;
   @include max(568px) {
     flex-direction: column;
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
   }
   margin: 20px;
   width: 100vw;
-  border-left: 20vw solid red;
-  border-right: 20vw solid red;
+  border-left: 20vw solid transparent;
+  border-right: 20vw solid transparent;
 }
